--- a/www/login.html
+++ b/www/login.html
@@ -7,22 +7,25 @@
   <title>Login</title>
   <link rel="stylesheet" href="./css/login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+  <link rel="icon" type="image/x-icon" href="./Media/logo.svg">
 </head>
 
 <body>
   <div class="background"></div>
   <div class="entire">
     <form action="login.php" method="post" class="login-form">
-      <h1>Login</h1>
-      <div class="input-container">
-        <input type="text" name="username" placeholder="Username" required>
-        <i class='bx bxs-user'></i>
-      </div>
-      <div class="input-container">
-        <input type="password" name="password" placeholder="Password" required>
-        <i class='bx bxs-lock-alt'></i>
-      </div>
+      <form>
+        <div class="material-input-container">
+          <input class="material-input" type="text" name="username" placeholder="" value="" required>
+          <label class="material-label" for="username">Username</label>
+        </div>
+        <div class="material-input-container">
+          <input class="material-input" type="password" id="password-input" name="password" placeholder="" value=""
+            required>
+          <label class="material-label" for="password">Password</label>
+          <i class='bx bxs-low-vision material-toggle' id="password-toggle"></i>
+        </div>
+      </form>
       <div class="remember-me">
         <label>
           <input type="checkbox" name="remember-me"> Remember Me
@@ -31,11 +34,17 @@
       </div>
       <button type="submit" class="button">Login</button>
       <div class="register">
-        <p>Create an account? <a href="#">Register here</a></p>
+        <p>Don't have an account yet? <a href="#">Register here</a></p>
       </div>
   </div>
-
-  </div>
+  <script>
+    const password_toggle = document.getElementById("password-toggle");
+    password_toggle.addEventListener("click", function () {
+      password_toggle.classList.toggle("material-toggle--active");
+      const password = document.getElementById("password-input");
+      password.type = password.type === "password" ? "text" : "password";
+    })
+  </script>
 </body>
 
 </html>
