feat: add logo to login page

--- a/www/homepage.html
+++ b/www/homepage.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <div class="navbar">
+    <a href="#">store</a>
+    <a href="#">categories</a>
+    <a href="#">search</a>
+    <a href="#">login</a>
+  </div>
 
 </body>
 
