--- a/www/login.html
+++ b/www/login.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="icon" type="image/x-icon" href="./Media/logo.svg">
@@ -13,6 +14,8 @@
 <body>
   <div class="background"></div>
   <div class="entire">
+    <img class="logo" src="./Media/logo-text.svg" alt="">
+    <h1>Login</h1>
     <form action="login.php" method="post" class="login-form">
       <form>
         <div class="material-input-container">
