--- a/www/login.html
+++ b/www/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Monad | Login</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+  <div class="navbar">
+    <a href="homepage.html">
+      <img class="navbar-logo" src="./Media/logo.svg" alt="">
+    </a>
+    <a class="navbar-link" href="#">Store</a>
+    <a class="navbar-link" href="#">Categories</a>
+    <a class="navbar-link" href="#">Search</a>
+    <a class="navbar-link" href="#">Login</a>
+  </div>
   <div class="background"></div>
   <div class="entire">
     <img class="logo" src="./Media/logo-text.svg" alt="">
