--- a/www/received-items.html
+++ b/www/received-items.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <img
+    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F5AiXFeN3dcE%2Fmaxresdefault.jpg&f=1&nofb=1&ipt=6d275fa00f6214b934046a0017322b139f9249876f0159e57233ad8d1c9bb9f8"
+    alt="">
+
 
 </body>
 
