--- a/www/basket-page.html
+++ b/www/basket-page.html
@@ -1,15 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MONAD Products</title>
+    <link rel="stylesheet" href="basket.css">
+    <script src="basket.js" defer></script>
 </head>
-
 <body>
 
-</body>
+<div class="body">
+    <div id="menu" class="container">
 
+        <div class="nav-col">
+            <div class="nav">
+                <img src="logo-text.svg" alt="Logo">
+            </div>
+
+            <div class="buttons">
+                <p>HOME</p>
+                <p>CATEGORY</p>
+            </div>
+
+            <div class="esports">
+                <img src="com2.png" alt="Esports Image">
+            </div>
+
+            <div class="logo2">
+                <img src="logo.svg" alt="Secondary Logo">
+            </div>
+        </div>
+
+    </div>
+
+    <div class="basket-com">
+        <div class="main-nav">
+            <a href="">ALL PRODUCT</a>
+        </div>
+
+        <div id="mats" class="basket-container">
+
+
+            <div class="prod-container">
+                <img src="mats/mats1.jpg" alt="Razer Firefly V2 Pro">
+                <div class="model"><p>Razer Firefly V2 Pro</p></div>
+                <div class="info">Edge-to-Edge Backlit Design<br>15-Zone Chroma Lighting<br>Integrated USB 2.0 Port</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="mats/mats2.jpg" alt="Monad Strider Chroma">
+                <div class="model"><p>MONAD Strider <br> Chroma</p></div>
+                <div class="info">Hybrid Soft/Hard Mat<br>19 Chroma™ RGB Zones<br>Extended Size</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="mats/mats3.jpg" alt="Gigantus V2">
+                <div class="model"><p>MONAD Gigantus V2</p></div>
+                <div class="info">Micro-weave cloth surface<br>High-density rubber foam<br>Anti-slip base</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="mats/mats4.jpg" alt="Atlas Mat">
+                <div class="model"><p>MONAD Atlas</p></div>
+                <div class="info">Premium Tempered Glass<br>Ultra-Smooth<br>Micro-Etched Surface</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="mice/RAZER BASILISK V3 PRO 35K.jpg" alt="Mouse">
+                <div class="model"><p>MONAD BASILISK <br> V3 PRO 35Ks</p></div>
+                <div class="info">Customizable Wireless Ergonomic RGB Gaming Mouse</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="pc accessories/Razer Adjustable Laptop Stand.jpg" alt="Laptop Stand">
+                <div class="model"><p>MONAD Adjustable <br> Laptop Stand</p></div>
+                <div class="info">For laptops up to 15"<br>18° ergonomic angle<br>Aluminium build</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="pc accessories/Razer Handheld Dock Chroma.jpg" alt="Dock">
+                <div class="model"><p>MONAD Handheld <br> Dock Chroma</p></div>
+                <div class="info">HDMI & USB Hub<br>Mobile & tablet gaming support</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+            <div class="prod-container">
+                <img src="pc accessories/RAZER USB C DOCK.jpg" alt="USB Dock">
+                <div class="model"><p>MONAD USB C DOCK</p></div>
+                <div class="info">11-Port USB-C Dock</div>
+                <div class="cart"><p>ADD TO CART</p></div>
+            </div>
+
+        </div>
+
+        <div class="commercial">
+            <img src="Worlds2023-Final-KV.webp" alt="Worlds Promo">
+        </div>
+
+    </div>
+</div>
+
+</body>
 </html>
