--- a/www/basket-page.html
+++ b/www/basket-page.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONAD Products</title>
-    <link rel="stylesheet" href="basket.css">
-    <script src="basket.js" defer></script>
+    <link rel="stylesheet" href="css/basket.css">
 </head>
 <body>
 
